add 对象存储管理